--- a/styles/navbar/_mobile.scss
+++ b/styles/navbar/_mobile.scss
@@ -4,9 +4,12 @@
         justify-content: space-between;
 
         .left-box {
-            .logo .nav-box{
-                // width: 20px;
-            }
+            .logo {
+                margin-right: 50px;
+                .nav-box {
+                    
+                }
+            } 
             .deliver {
                 display: none;
             }
@@ -28,7 +31,8 @@
         .main-box {
             
             .search-bar {
-                width: 150px;
+                margin-left: 50px;
+                width: 110px;
                 flex: 0;
             }
 
