--- a/styles/navbar/_mobile.scss
+++ b/styles/navbar/_mobile.scss
@@ -37,7 +37,7 @@
             }
 
             .search-btn {
-                display: none;
+                // display: none;
             }
 
             .nav-search-dropdown {
