--- a/styles/subnavbar/_desktop.scss
+++ b/styles/subnavbar/_desktop.scss
@@ -2,4 +2,55 @@
 .sub-nav {
     height: 39px;
     background: #232f3e;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+
+    .sub-nav-box {
+        line-height: 12px;
+        // height: 25px;
+        font-size: 14px;
+        margin-left: 10px;
+        padding-right: 10px;
+    }
+
+    .menu {
+        height: 100%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+
+        .hamburger-menu {
+            height: 30px;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+
+            .hamburger {
+                // width: 17px;
+                // height: 14px;
+                // background: url(/Assets/Img/hamburger.jpg) no-repeat center center/cover;
+            }
+
+            .words {
+                font-weight: 700;
+            }
+        }
+    }
+
+    .list {
+        height: 100%;
+        display: flex;
+        align-items: center;
+        a {
+            display: flex;
+            align-items: center;
+            height: 30px;
+            text-decoration: none;
+            padding: 0 7px;
+            font-weight: 400;
+        }
+    }
 }
