--- a/index.style.css
+++ b/index.style.css
@@ -27,6 +27,116 @@
   font-family: "Amazon Ember";
   font-weight: 700;
   src: url(https://m.media-amazon.com/images/S/sash/KFPk-9IF4FqAqY-.woff2) format("woff2"), url(https://m.media-amazon.com/images/S/sash/mzVbGSgvdBfRLX9.woff) format("woff"); }
+main {
+  display: flex;
+  flex-direction: column;
+  max-width: 1500px;
+  margin: 10px 5vw; }
+  main a {
+    color: #007185;
+    text-decoration: none;
+    font-size: 14px;
+    font-weight: 400; }
+    main a:hover {
+      text-decoration: underline;
+      color: #c7511f; }
+  main .path {
+    font-size: 12px;
+    font-weight: 400;
+    color: #565959;
+    margin-bottom: 20px; }
+  main .panes {
+    width: 100%;
+    height: 900px;
+    display: flex;
+    flex-direction: row;
+    border-bottom: 1px #ccc solid; }
+    main .panes .pane {
+      height: 99%; }
+    main .panes .big {
+      font-size: 18px; }
+    main .panes .red {
+      color: #b12704; }
+    main .panes .line {
+      text-decoration: line-through; }
+    main .panes .container {
+      width: 80%;
+      display: flex; }
+      main .panes .container .image-pane {
+        width: 60%; }
+      main .panes .container .detailes-pane {
+        width: 40%; }
+        main .panes .container .detailes-pane .box {
+          border-bottom: 1px #e2e0e0 solid;
+          width: 100%; }
+        main .panes .container .detailes-pane .top-top {
+          height: 25%;
+          display: flex;
+          flex-direction: column;
+          justify-content: flex-start; }
+          main .panes .container .detailes-pane .top-top .top {
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-end; }
+            main .panes .container .detailes-pane .top-top .top h1 {
+              font-weight: 400;
+              font-size: 24px;
+              color: #565959; }
+          main .panes .container .detailes-pane .top-top .bottom a {
+            font-size: 12px; }
+        main .panes .container .detailes-pane .top-down {
+          height: 15%;
+          color: #565959;
+          font-size: 14px;
+          display: flex;
+          flex-direction: column;
+          justify-content: flex-start; }
+          main .panes .container .detailes-pane .top-down .top {
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            line-height: 20px;
+            padding: 10px 0; }
+          main .panes .container .detailes-pane .top-down .bottom {
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start; }
+        main .panes .container .detailes-pane .down-top {
+          height: 24%;
+          display: flex;
+          flex-direction: column;
+          justify-content: center; }
+          main .panes .container .detailes-pane .down-top h4 {
+            margin: 0.5vw 0; }
+          main .panes .container .detailes-pane .down-top ul {
+            font-size: 14px;
+            margin-left: 18px;
+            margin-bottom: 0.5vw; }
+            main .panes .container .detailes-pane .down-top ul li {
+              padding: 3px 0; }
+        main .panes .container .detailes-pane .down-down {
+          border: none; }
+    main .panes .sale-pane {
+      width: 20%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+      font-size: 14px;
+      line-height: 20px;
+      font-weight: 400; }
+      main .panes .sale-pane .small {
+        line-height: 16px;
+        font-size: 12px; }
+      main .panes .sale-pane .light {
+        color: #565959; }
+      main .panes .sale-pane .with-border {
+        border: #ccc 1px solid;
+        border-radius: 5px;
+        height: 70%;
+        width: 90%;
+        padding: 1rem; }
+
 .nav-box {
   height: 50px;
   color: #fff; }
