--- a/styles/footer/carousel/_desktop.scss
+++ b/styles/footer/carousel/_desktop.scss
@@ -1,1 +1,37 @@
-$b: brown;
+footer {
+    max-width: 1500px;
+    height: 30vh;
+    margin: 10px 5vw;
+
+    .tag {
+        height: 15%;
+    }
+    .carousel {
+        display: flex;
+        height: 90%;
+        width: 100%;
+
+        .arrow {
+            width: 38px;
+            height: 100%;
+            display: flex;
+            align-items: center;
+
+            button {
+                padding: 0.5rem;
+                background: #fff;
+                border: 1px rgba(0, 0, 0, 0.225) solid;
+                border-radius: 10px;
+            }
+        }
+
+        .table {
+            height: 100%;
+            width: 90%;
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+
+
+        }
+    }
+}
