--- a/styles/main/_mobile.scss
+++ b/styles/main/_mobile.scss
@@ -8,7 +8,7 @@
             .container {
                 flex-direction: column;
                 width: 100%;
-                height: 200vh;
+                // height: 200vh;
 
                 .image-pane {
                     width: 100%;
